# nic

./: .aiignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker.yaml  release.yaml
src/: app.rs  console.rs  form.rs  input.rs  main.rs  tray.rs  ui.rs
src/platform/: mod.rs  unix.rs  windows.rs
