[package]
name = "nic"
description = "🛠️ nic — a tiny cross-platform Network Config UI"
version = "0.1.4"
edition = "2024"
build = "build.rs"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/nic"
homepage = "https://github.com/lvillis/nic"
documentation = "https://github.com/lvillis/nic#readme"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
anyhow = { version = "1.0.98" }
crossbeam-channel = { version = "0.5.15" }
once_cell = { version = "1.19" }
regex = { version = "1.10" }

# tui stack, default features disabled for smaller binary
ratatui = { version = "0.30.0-alpha.4", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29.0", default-features = false }
ctrlc = { version = "3.4.7" }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }
windows-sys = { version = "0.59.0", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
tray-icon = { version = "0.20.1" }
ico = { version = "0.4.0" }

[target.'cfg(unix)'.dependencies]
pnet_datalink = { version = "0.35.0" }

[build-dependencies]
embed-resource = { version = "3.0.2" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
